cluster/apps/media/immich/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-server
  labels:
    app: immich
    component: server
  annotations:
    metallb.io/address-pool: default-pool
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.234
  selector:
    app: immich
    component: server
  ports:
    - name: http
      port: 2283
      targetPort: 2283
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  labels:
    app: immich
    component: machine-learning
spec:
  type: ClusterIP
  selector:
    app: immich
    component: machine-learning
  ports:
    - name: http
      port: 3003
      targetPort: 3003
      protocol: TCP
