cluster/apps/media/immich/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: immich-server-ingress
spec:
  endpointSelector:
    matchLabels:
      app: immich
      component: server
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: ingress-haproxy
            k8s:app.kubernetes.io/name: haproxy-ingress
        - matchExpressions:
            - key: k8s:app
              operator: In
              values:
                - homepage
                - homepage-client
          matchLabels:
            k8s:io.kubernetes.pod.namespace: productivity
      toPorts:
        - ports:
            - protocol: TCP
              port: "2283"
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: service-mesh
      toPorts:
        - ports:
            - protocol: TCP
              port: "4191"
